tests/parser-test-files/bad-files/parse-method.1.error
error: Malformed method definition
  --> test:4:12
   |
 3 |  (define-class (Greetable :a)
   |                -------------- in this class definition
 4 |    (Greet :a Unit))
   |              ^^^^ unexpected trailing form
