tests/parser-test-files/bad-files/parse-method.1.coal
(package test)

(define-class (Greetable :a)
  (Greet :a Unit))
